人才热线个人主页收到的消息

--- a/css/message谌锐铖.css
+++ b/css/message谌锐铖.css
@@ -3,7 +3,7 @@
     padding: 0px;
     font-family: "微软雅黑";
 }
-.bg {
+.backg {
     height: 48px;
     width: 100%;
     background-color: rgb(48,57,62);
