--- a/css/xgmm_dl.css
+++ b/css/xgmm_dl.css
@@ -2,16 +2,24 @@
     margin: 0;
     padding: 0;
 }
+
+#ff{border: 0px solid red;
+    width: 1366px;
+    height: 550px;
+    margin-top: 55px;
+    position: absolute;
+}
 #a{ border: 0px solid red;
     width: 1366px;
     height: 50px;
     background-color: #313a3f;
     float: left;
+    position: relative;
 }
 #b{ border: 0px solid red;
     width:170px ;
     height: 48px;
-    margin-left: 300px;
+    margin-left: 240px;
     float: left;
 }
 #c{border: 0px solid red;
@@ -45,9 +53,10 @@
 #f{
     border: 1px solid #dadada;
     width:172px ;
-    height:700px;
-    margin-left:300px ;
+    height:550px;
+    margin-left:240px ;
     float:left;
+    position: relative;
 }
 #g{border: 1px solid #dadada;
     width: 155px;
@@ -91,9 +100,10 @@
 }
 #m{border: 1px solid #dadada;
     width: 830px;
-    height: 700px;
+    height: 550px;
     float: left;
     margin-left: 30px;
+    position: relative;
 }
 #n{border: 0px solid red;
     width: 85px;
