finish(最新的修改密码)html

--- a/css/xgmm_dl.css
+++ b/css/xgmm_dl.css
@@ -45,9 +45,9 @@
     margin-left: 180px;
     float: left;
 }
-.e{
+.e{ margin-top: 5px;
     background-color: #435259 ;
-    height: 48px;
+    height: 40px;
 }
 
 #f{
