--- a/css/xgmm_dl.css
+++ b/css/xgmm_dl.css
@@ -186,3 +186,12 @@
 
 
 }
+#aaa{
+    border: 0px solid red;
+    width: 1366px;
+    height: 100px;
+    background-color: #313a3f;
+    float: left;
+    margin-top: 570px;
+
+}
