提交我做的职位详情

--- a/css/zwxq.css
+++ b/css/zwxq.css
@@ -10,8 +10,8 @@ li {
 
 .header {
     width: 100%;
-    height: 36px;
-    background-color: #000000;
+    height: 32px;
+    background-color: rgb(47, 58, 63);
     height: 40px;
 }
 
@@ -36,27 +36,96 @@ li {
 }
 
 .header_zhongtwo {
-    height: 40px;
+    height: 38px;
     float: left;
+
 }
 
 .header_zhongtwo li {
     float: left;
-    line-height: 40px;
+    line-height: 38px;
     font-size: 16px;
     color: #ffffff;
     float: left;
     margin: 0px auto;
-    margin-left: 30px;
+    margin-left: 20px;
     list-style-type: none;
+
 }
 
 #gs {
-    width: 50px;
-    height: 40px;
-
+    text-align: center; background-color: rgb(47, 58, 63);
+}
+#gs:hover {
     background-color: rgb(76, 191, 251);
+    color: white;
+}
+
+.header_right {
+    line-height: 40px;
+    height: 40px;
+    float: right;
+    color: #ffffff;
+    font-size: 16px;
+}
+
+#ga { background-color: rgb(47, 58, 63);
     text-align: center;
+}
+
+#ga:hover {
+    background-color: rgb(76, 191, 251);
+    color: white;
+}
+
+.header_right {
+    line-height: 40px;
+    height: 40px;
+    float: right;
+    color: #ffffff;
+    font-size: 16px;
+}
+
+#gb {
+    text-align: center; background-color: rgb(47, 58, 63);
+}
+#gb:hover {
+    background-color: rgb(76, 191, 251);
+    color: white;
+}
+
+.header_right {
+    line-height: 40px;
+    height: 40px;
+    float: right;
+    color: #ffffff;
+    font-size: 16px;
+}
+#gc {
+
+    color: white;
+    font-size: 16px;
+    background-color: rgb(47, 58, 63);
+    width: 130px; height: 40px;
+    float: left;
+}
+#gc li {float: left;  padding: 0px 3px 0px 9px;}
+
+#hf { background-color: rgb(47, 58, 63);
+    text-align: center;
+}
+
+#hf:hover {
+    background-color: rgb(76, 191, 251);
+    color: white;
+}
+#hn { background-color: rgb(47, 58, 63);
+    text-align: center;
+}
+
+#hn:hover {
+    background-color: rgb(76, 191, 251);
+    color: white;
 }
 
 .header_right {
