--- a/css/message.css
+++ b/css/message.css
@@ -3,42 +3,52 @@
     padding: 0px;
     font-family: "微软雅黑";
 }
-.backg {
-    height: 48px;
+.back {
+    height: 52px;
     width: 100%;
     background-color: rgb(48,57,62);
 }
 .head {
-    height: 48px;
-    width: 70%;
-    margin: 0px auto;
+    height: 52px;
+    width: 1089px;
+    margin: auto;
+
 }
-.head img {
-    float: left;
-    margin-right: 60px;
+
+
+.sho {
+    margin-left: 71px;
 }
-.head ul li{
-    float: left;
+.gs {
+    margin-left: 40px;
+}
+.wo {
+    margin-left: 40px;
+}
+.ko {
+
+}
+.ko li {
     list-style-type: none;
-    margin: 10px 8px;
-    padding: 3px;
+
     color: #cccccc;
     font-size: 15px;
+    float: left;
+    height: 52px;
+    line-height: 50px;
+    text-align: center;
+
 }
 .head_right{
     float: right;
-    position: absolute;
-    font-size: 15px;
-    left: 1170px;
-    color: white;
+    margin-left: 498px;
     background-color: rgb(67,82,89);
-
 }
 select {
     position: absolute;
     top: 0px;
     width: 150px;
-    height: 48px;
+    height: 52px;
     text-indent: 1em;
     color: white;
     background-color: rgb(67,82,89);
@@ -47,9 +57,9 @@ select {
     width: 200px;
     height: 700px;
     border: 1px solid rgb(230, 230, 230);
-    margin: 30px 234px;
+    margin-right: 43px;
     float: left;
-    position: relative;
+
 }
 .zhongxin {
     width: 100%;
@@ -87,10 +97,9 @@ dd {
     width: 840px;
     height: 700px;
     float: left;
-    margin-top: 25px;
     border: 1px solid rgb(230, 230, 230);
-    position: absolute;
-    left: 480px;
+
+
 }
 
 .daa {
@@ -203,6 +212,11 @@ dd {
     width: 100%;
     height: 170px;
     clear: left;
+}
+.div {
+    width: 1087px;
+    height: 700px;
+    margin: 25px auto;
 }
 
 
