提交我修改后的职位详情

--- a/css/zwxq.css
+++ b/css/zwxq.css
@@ -21,7 +21,7 @@ li {
 .header_middle {
     width: 60%;
     height: 40px;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
 .header_left {
@@ -191,7 +191,7 @@ li {
 
 }
 
-.xz {
+.xhz {
     padding: 5px 60px 0px 0px;
 }
 
