--- a/css/zwxq.css
+++ b/css/zwxq.css
@@ -64,6 +64,7 @@ li {
 #gs:hover {
     background-color: rgb(76, 191, 251);
     color: white;
+    cursor: pointer;
 }
 
 .header_right {
@@ -81,7 +82,7 @@ li {
 
 #ga:hover {
     background-color: rgb(76, 191, 251);
-    color: white;
+    color: white; cursor: pointer;
 }
 
 .header_right {
@@ -99,7 +100,7 @@ li {
 
 #gb:hover {
     background-color: rgb(76, 191, 251);
-    color: white;
+    color: white; cursor: pointer;
 }
 
 .header_right {
@@ -135,7 +136,7 @@ li {
 
 #hf:hover {
     background-color: rgb(76, 191, 251);
-    color: white;
+    color: white; cursor: pointer;
 }
 
 #hn {
@@ -145,7 +146,7 @@ li {
 
 #hn:hover {
     background-color: rgb(76, 191, 251);
-    color: white;
+    color: white; cursor: pointer;
 }
 
 .header_right {
@@ -346,8 +347,35 @@ li {
     color: white;
 }
 
+#aa {
+    text-align: center;
+}
+
+#aa:hover {
+    color: white; cursor: pointer;
+}
+#bb {
+    text-align: center;
+}
+
+#bb:hover {
+    color: white; cursor: pointer;
+}
+#cc {
+    text-align: center;
+}
+
+#cc:hover {
+    color: white; cursor: pointer;
+}
+
+
 #hs {
     background-color: #CCCCCC;
+    text-align: center;
+}
+#hs:hover {
+    color: white; cursor: pointer;
 }
 
 .mk1 {
