--- a/css/wdjl.html.css
+++ b/css/wdjl.html.css
@@ -1,31 +1,23 @@
 
 * {margin:0px;padding:0px}
-#onediv {background-color: #313a3f;
+.onediv {background-color: #313a3f;
     height:50px;
     width: 100%;
-    position: relative}
-#twodiv {background-color: #313a3f;
-    float: right;
-    width: 160px;
-    position:absolute;
-    left:1170px;top: 0px}
-.oneul li {list-style: none;
-    color:white;
-    line-height:48px;
-    float: left;width:75px;
-    height:50px;
-    text-align: center;
-    position:relative;
-    left:250px}
-.oneul {width: 550px;
-    height: 50px}
-.oneli {padding-right:107px}
+    }
+.ul_div li {float: left;list-style: none;line-height: 50px;width:80px;color: white;
+    text-align: center;}
+.tu_div {float: left;width: 206px;position: relative;left: 225px}
+.ul_div {height: 50px;float: left;width: 275px;position: relative;left: 217px}
+.fourli {background-color: deepskyblue;}
+.twodiv {height: 50px;line-height: 50px;width: 157px;float:left ;position: relative;left:665px}
+select {height: 53px;background-color:#435259;padding-left: 10px;
+    width:157px;}
 #threediv{width: 190px;
     height: 700px;
     border: 1px solid  #ccc;
-    position: absolute;
-    left:250px;
-    top:75px}
+   float: left;
+    margin-left: 30px;
+    }
 .twoli {clear: both;
     color: black;
     width: 140px;
@@ -39,16 +31,12 @@
     padding-left:20px;
     line-height: 45px}
 img {vertical-align: middle}
-.fourli {background-color: deepskyblue;}
-.fiveli {padding-left: 20px;clear: both;
-    list-style: none;
-    line-height: 50px;
-    color: white}
-.sixli {padding-left: 20px;
-    clear: both;
-    list-style: none;
-    line-height:48px;
-    background-color: #cccccc}
+
+
+
+
+
+
 .threeul li {list-style: none;}
 .sevenli {clear: both;color: black;
     width: 140px;position: relative;
@@ -59,25 +47,23 @@ img {vertical-align: middle}
     line-height: 45px;padding-left: 50px;
     border-bottom: 1px solid #ccc}
 #fourdiv {width:873px;height: 700px;
-    border: 1px solid  #ccc;
-    position:relative;top:25px;
-    left: 455px }
+    border: 1px solid  #ccc;margin-left: 20px;
+    float: left }
 #fivediv {border-bottom:2px solid orange;
     width: 90px;height: 40px;
-    position: absolute;top: 10px;
-    left: 10px;
+    float: left;margin-top: 10px;margin-left: 10px;
     line-height: 40px; }
 #sixdiv {border-bottom: 1px solid #cccccc;
     height: 40px;
     width: 750px;
     position: relative;
     top: 11px;left: 100px}
-#sevendiv {width: 810px;
+#sevendiv {width: 820px;
     height: 50px;
     border-bottom: 1px dashed #cccccc;
     line-height: 50px;
     position: relative;top: 10px;
-    left: 10px;padding-left: 30px}
+    left: 10px;padding-left:20px}
 #eightdiv {position:relative;
     top: 20px;left:10px;
     padding-left:10px;
@@ -108,4 +94,5 @@ span {position: relative;
 #eightdiv ul li {list-style: none;
     height:35px;
     line-height:35px;}
-.bigdiv {width: 100%;height: 100%;margin: 0 auto;border: 1px solid red}
+#bigdiv {width:1200px;height:730px;margin:20px auto; }
+#biggerdiv {width:100%;height:50px;;position: relative}
