--- a/css/zwxq.css
+++ b/css/zwxq.css
@@ -370,11 +370,11 @@ li {
 }
 
 
-#hs {
+#hy {
     background-color: #CCCCCC;
     text-align: center;
 }
-#hs:hover {
+#hy:hover {
     color: white; cursor: pointer;
 }
 
