--- a/css/qy_dl.css
+++ b/css/qy_dl.css
@@ -13,6 +13,12 @@
     line-height: 50px;
     margin: 0 auto;
 }
+.header_a li{
+    height: 48px;
+    line-height: 48px;
+    display: block;
+    text-align: center;
+}
 .header_a li a{
     color: white;
     text-decoration: none;
@@ -21,16 +27,20 @@
 .header_a li a:hover{
     color: chocolate;
 }
+.header_a li:hover{
+    background: dodgerblue;
+}
 .header_a img{
     float: left;
 }
 .header_a_1{
+    width: 60px;
     float: left;
     list-style: none;
-    margin: 0 0 0 20px;
 }
 .header_a_2{
-   float: right;
+    width: 100px;
+    float: right;
     list-style: none;
 }
 #nav_1{
@@ -115,6 +125,8 @@
     background: #ffffff;
 }
 .qyhr{
+    border: 1px solid rgb(126,166,178);
+    background:#ffffff url("../images/ok.jpg") no-repeat 85px 0;
     float: left;
 }
 .qzz{
@@ -144,10 +156,12 @@
     width: 140px;
     height: 20px;
     line-height: 20px;
-    vertical-align: middle;
     font-size: 8px;
     float: left;
-    margin: 5px 0 0 6px;
+    margin: 0 0 0 6px;
+}
+.former_d_2 img{
+    vertical-align: middle;
 }
 .former_d_2 a{
     color: rgb(229,230,232);
