--- a/css/sy.css
+++ b/css/sy.css
@@ -13,6 +13,12 @@
     line-height: 50px;
     margin: 0 auto;
 }
+.header_a li{
+    height: 48px;
+    line-height: 48px;
+    display: block;
+    text-align: center;
+}
 .header_a li a{
     color: white;
     text-decoration: none;
@@ -21,15 +27,19 @@
 .header_a li a:hover{
     color: chocolate;
 }
+.header_a li:hover{
+    background: dodgerblue;
+}
 .header_a img{
     float: left;
 }
 .header_a_1{
+    width: 60px;
     float: left;
     list-style: none;
-    margin: 0 0 0 20px;
 }
 .header_a_2{
+    width: 100px;
     float: right;
     list-style: none;
 }
@@ -80,6 +90,8 @@
     margin: 10px 0 0 0;
 }
 .qyhr{
+    border: 1px solid rgb(126,166,178);
+    background:#ffffff url("../images/ok.jpg") no-repeat 70px 0;
     float: left;
 }
 .qzz{
@@ -151,6 +163,9 @@
 .former_yz_a{
     float: left;
     margin: 15px 0 0 10px;
+}
+.former_yz_a img{
+    vertical-align: middle;
 }
 .former_yz_a a{
     color: #cccccc;
@@ -246,11 +261,13 @@ span{
     float: left;
 }
 .lefter_dr_2{
-    vertical-align: middle;
     font-size: 14px;
     color: darkorange;
     float: right;
     margin: 0 0 0 35px;
+}
+.lefter_dr_2 img{
+    vertical-align: middle;
 }
 .lefter_dr_3{
     font-family: "微软雅黑";
@@ -307,32 +324,29 @@ span{
     font-family: "微软雅黑";
 }
 .righter_1_c{
-    width: 350px;
+    width: 390px;
     height: 30px;
-    margin: 80px 0 0 20px;
+    margin: 90px 0 0 0;
     float: left;
+    background: #eee;
 }
-.righter_1_c li{
+.righter_1_c p{
+    height: 23px;
     list-style: none;
     float: left;
-    line-height: 30px;
+    line-height: 23px;
+}
+.righter_1_c p img{
+    vertical-align: middle;
 }
 .righter_1_c_1{
-    vertical-align: middle;
-    height: 30px;
-    line-height: 30px;
+    margin: 5px 0 0 20px;
 }
 .righter_1_c_2{
-    vertical-align: middle;
-    height: 30px;
-    line-height: 30px;
-    margin: 0 0 0 60px;
+    margin: 5px 0 0 60px;
 }
 .righter_1_c_3{
-    vertical-align: middle;
-    height: 30px;
-    line-height: 30px;
-    margin: 0 0 0 60px;
+    margin: 5px 0 0 50px;
 }
 .mshg{
     width: 790px;
