--- a/css/qy_qz.css
+++ b/css/qy_qz.css
@@ -21,15 +21,24 @@ a:link {
     width: 600px;
     height: 49px;
 }
+.fk li:hover {
+    background-color: rgb(76,190,250);
+    color: white;
+    margin-top: 0px;
+    height: 48px;
+    cursor: pointer;
+}
 .head img {
     float: left;
 }
 .head ul li{
     float: left;
     list-style-type: none;
-    margin: 10px 20px;
-    padding: 3px;
+    margin: 0px 20px;
     color: #cccccc;
+    height: 48px;
+    line-height: 48px;
+    padding: 0px 20px;
 }
 .head_right{
     float: right;
@@ -39,6 +48,13 @@ a:link {
     color: #cccccc;
     width: 160px;
     height: 48px;
+}
+.head_right a:link {
+    color: #ccc;
+}
+.head_right a:hover {
+    color: darkorange;
+    text-decoration: none;
 }
 .body {
     width: 100%;
@@ -104,6 +120,9 @@ a:link {
     line-height: 30px;
     text-align: center;
     float: left;
+    background-image: url(../images/ok.jpg);
+    background-repeat: no-repeat;
+    background-position: 105px 0px;
 }
 .zc_2 a:visited {
     color: black;
