--- a/css/grzy_sc.css
+++ b/css/grzy_sc.css
@@ -35,13 +35,13 @@ li{
 .a li{
     list-style: none;
     float: left;
-    font-size: 14px;
-    color: white;
+    font-size: 12px;
+    color: #CCCCCC;
     margin: 0 0 0 20px;
 }
 a{
     text-decoration: none;
-    color: white;
+    color: #CCCCCC;
 }
 .b{
     float: right;
@@ -53,9 +53,8 @@ a{
      height: 550px;
      border: 1px solid #ccc;
      margin:0px 0 0 40px;
+    float: left;
 
-
-     float: left;
  }
 .w li{
     width: 140px;
@@ -136,35 +135,47 @@ a{
     font-size: 14px;
 }
 .bottom{
+    width: 300px;
+    height: 40px;
+    margin:0 auto;
 
-    margin: 0 0 0 10px;
+}
+/*.bottom li{*/
+    /*list-style: none;*/
+    /*float: left;*/
+    /*font-size: 10px;*/
+    /*font-family: "微软雅黑";*/
+    /*cursor: pointer;*/
+    /*margin: 0 auto;*/
+/*}*/
+
+.ooo li{
+    border: 1px solid #cccccc;
+    margin: 10px 10px 0 0;
+    text-align: center;
+    padding: -5px 0 0 0;
+    float: left;
     font-size: 10px;
-    font-family: "微软雅黑";
-    cursor: pointer;
+    line-height: 20px;
 }
 .bottom_a{
-    width: 40px;
+    width: 45px;
     height: 20px;
-    border: 1px solid #cccccc;
-    text-align: center;
+
 }
 .bottom_b{
     width: 20px;
     height: 20px;
-    text-align: center;
-    border: 1px solid #cccccc;
 
+    text-align: center;
 }
 .bottom_b:hover{
     background: darkorange;
     color: white;
+
 }
-.ooo ul li{
-    float: left;
-}
-.ooo{
-    margin: 35px 0 0 200px;
-}
+
+
 .d1{
     width: 100%;
     height: 100px;
