--- a/css/grzy_sc.css
+++ b/css/grzy_sc.css
@@ -146,8 +146,9 @@ a{
     /*font-size: 10px;*/
     /*font-family: "微软雅黑";*/
     /*cursor: pointer;*/
-    /*margin: 0 auto;*/
-/*}*/
+    /*margin: 0 auto;
+    }*/
+
 
 .ooo li{
     border: 1px solid #cccccc;
